<resources>
    <string name="app_name">Innofit</string>

    <!-- FOR LANDING-->
    <string name="landing_tagline">InnoFit will help you find your instructor and help you build your physique to look aesthetically pleasing.</string>
    <string name="landing_title">InnoFit</string>
    <string name="landing_loginbtn">Login</string>
    <string name="landing_signupbtn">Signup</string>
    <string name="landing_otherbtn">How we work?</string>

    <!-- FOR LOGIN & SIGNUP-->
    <string name="Login_login">Login</string>
    <string name="Login_usernametxt">Enter Username</string>
    <string name="Login_emailtxt">Enter Username</string>
    <string name="Login_passwordtxt">Enter Password</string>
    <string name="Login_forgetpassword">Forgot Password</string>
    <string name="Login_rmbrme">Remember Me</string>
    <string name="Signup_fullname">Full Name</string>
    <string name="Signup_username">Username</string>
    <string name="Signup_email">Email</string>
    <string name="Signup_password">Password</string>
    <string name="Signup_cpassword">Confirm Password</string>
    <string name="Signup_signup">Sign up</string>
    <string name="Signup_Height">Height</string>
    <string name="Signup_Weight">Weight</string>
    <string name="intensity_level">Intensity Level</string>
    <string name="low">Low</string>
    <string name="moderate">Moderate</string>
    <string name="vigorous">Vigorous</string>
    <string name="push_ups">Push Ups</string>
    <string name="x8">x8</string>
    <string name="next">Next</string>
    <string name="x18">x18</string>
    <string name="mountain_climber">Mountain Climber</string>
    <string name="finish">Finish</string>
    <string name="squats">Squats</string>

    <!-- Progress Tracker & Create Task-->
    <string name="task_description">Task Description :</string>
    <string name="task_title">Title</string>
    <string name="task_name">Task Name :</string>
    <string name="create_task">Create Task</string>
    <string name="task_cancel">Cancel</string>
    <string name="task_confirm">Confirm</string>
    <string name="to_do_list">To Do List</string>
    <string name="progress_tracker">PROGRESS TRACKER</string>


</resources>