<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/prominent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/create_task"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/taskname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/task_name"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="5pt"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/task_title_edittext"
                android:hint="@string/task_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginLeft="5pt"
                android:layout_marginRight="5pt"
                android:layout_marginTop="3pt"
                android:background="@drawable/task_title"/>

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/taskdesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/task_description"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="5pt"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="80pt"
                android:id="@+id/task_desc_edittext"
                android:hint="Description"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginLeft="5pt"
                android:layout_marginRight="5pt"
                android:layout_marginTop="3pt"
                android:background="@drawable/task_title"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="15pt"
            android:layout_height="20pt"
            android:layout_weight="1"
            android:text="@string/task_cancel"
            android:layout_marginTop="20pt"
            android:layout_marginStart="15pt"
            android:layout_marginEnd="3pt"
            android:textStyle="bold"
            android:textSize="18sp"
            android:background="@drawable/cancel"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/confirm"
            android:layout_width="15pt"
            android:layout_height="20pt"
            android:layout_weight="1"
            android:text="@string/task_confirm"
            android:layout_marginTop="20pt"
            android:layout_marginEnd="15pt"
            android:layout_marginStart="3pt"
            android:textStyle="bold"
            android:textSize="18sp"
            android:background="@drawable/confirm"/>
    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>
