<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/main_logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/blinker_semibold"
            android:text="@string/landing_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="60sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/blinker"
            android:text="@string/landing_tagline"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp">


            <Button
                android:id="@+id/login_btn"
                android:onClick="callLoginSCreen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/prominent"
                android:fontFamily="@font/blinker_semibold"
                android:text="@string/landing_loginbtn"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:transitionName="transition_login" />

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@color/prominent"
                android:fontFamily="@font/blinker_semibold"
                android:text="@string/landing_signupbtn"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="ButtonStyle,RtlHardcoded,VisualLintButtonSize" />

        </LinearLayout>

    </LinearLayout>


</ScrollView>