<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".low_exercise1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="1dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/blinker_bold"
            android:gravity="center"
            android:text="@string/mountain_climber"
            android:textColor="@color/prominent"
            android:textSize="50sp" />

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/mountain_climber" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/blinker_bold"
            android:gravity="center"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:text="@string/x18"
            android:textColor="@color/prominent"
            android:textSize="40sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="324dp"
            android:layout_height="61dp"
            android:fontFamily="@font/blinker_extrabold"
            android:gravity="center"
            android:text="@string/next"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>