<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".weight_class">

    <Button
        android:id="@+id/button3"
        android:layout_width="300dp"
        android:layout_height="61dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="56dp"
        android:fontFamily="@font/blinker_semibold"
        android:text="@string/low"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/button5"
        android:layout_width="300dp"
        android:layout_height="61dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="56dp"
        android:fontFamily="@font/blinker_semibold"
        android:text="@string/vigorous"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="180dp"
        android:layout_height="25dp"
        android:layout_marginStart="115dp"
        android:layout_marginEnd="116dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:srcCompat="@drawable/star1" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="180dp"
        android:layout_height="25dp"
        android:layout_marginStart="115dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="205dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:srcCompat="@drawable/star3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="300dp"
        android:layout_height="61dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="56dp"
        android:fontFamily="@font/blinker_semibold"
        android:text="@string/moderate"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="180dp"
        android:layout_height="25dp"
        android:layout_marginStart="115dp"
        android:layout_marginEnd="116dp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:srcCompat="@drawable/star2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="344dp"
        android:layout_height="64dp"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/blinker_extrabold"
        android:text="@string/intensity_level"
        android:textColor="@color/prominent"
        android:textSize="53sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>