<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:padding="3dp"
    android:transitionName="transition_login"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_gravity="center">


        <ImageView
            android:id="@+id/login_back_button"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:padding="1dp"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/blinker_extrabold"
            android:text="@string/Signup_signup"
            android:textColor="@color/prominent"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:textColorHint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/baseline_abc_24"
                app:startIconTint="@color/prominent"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nametxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/blinker"
                    android:hint="@string/Signup_fullname" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:textColorHint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/baseline_account_box_24"
                app:startIconTint="@color/prominent"
                android:layout_marginTop="5dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usertxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/blinker"
                    android:hint="@string/Signup_username" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:textColorHint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/baseline_email_24"
                app:startIconTint="@color/prominent"
                android:layout_marginTop="5dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailtxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/blinker"

                    android:hint="@string/Signup_email" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:textColorHint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/baseline_password_24"
                app:startIconTint="@color/prominent"
                app:endIconTint="@color/prominent"
                android:layout_marginTop="5dp"
                app:endIconMode="password_toggle"
                android:inputType="textPassword"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passtxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/blinker"
                    android:hint="@string/Signup_password" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:textColorHint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/baseline_password_24"
                app:startIconTint="@color/prominent"
                app:endIconTint="@color/prominent"
                android:layout_marginTop="5dp"
                app:endIconMode="password_toggle"
                android:inputType="textPassword"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cpasstxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/blinker"
                    android:hint="@string/Signup_password" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button

                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/prominent"
                android:fontFamily="@font/blinker_semibold"
                android:text="@string/Signup_signup"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/loginn_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="#00000000"
                android:fontFamily="@font/blinker_semibold"
                android:onClick="callSignUpFromLogin"
                android:text="LOGIN"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>



</ScrollView>