<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/prominent2"
        android:padding="20dp">

        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:src="@drawable/profile_icon" />

        <TextView
            android:id="@+id/fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_below="@+id/profile_icon"
            android:fontFamily="@font/blinker_bold"
            android:layout_centerInParent="true"
            android:text="InnoFit Profile"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="-70dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/prominent"
            app:cardElevation="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:background="">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/baseline_account_balance_wallet_24" />

                <TextView
                    android:id="@+id/session"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/blinker_semibold"
                    android:text="$0"
                    android:textColor="@color/white"
                    android:textSize="35sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/session"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/blinker"
                    android:text="Wallet"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/prominent"
            app:cardElevation="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:background="">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/baseline_attach_money_24"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/session2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/blinker_semibold"
                    android:text="$0"
                    android:textColor="@color/white"
                    android:textSize="35sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/blinker"
                    android:text="Balance"
                    android:textColor="@color/white"
                    android:layout_below="@+id/session2"
                    android:layout_centerHorizontal="true"
                    android:textSize="18sp" />

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/baseline_abc_24"
            app:startIconTint="@color/prominent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameget"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/blinker"
                android:hint="@string/Signup_fullname" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/baseline_account_box_24"
            app:startIconTint="@color/prominent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userget"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/blinker"
                android:hint="@string/Signup_username" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/baseline_email_24"
            app:startIconTint="@color/prominent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailget"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/blinker"
                android:hint="@string/Signup_email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/baseline_password_24"
            app:startIconTint="@color/prominent"
            app:endIconTint="@color/prominent"
            android:layout_marginTop="5dp"
            app:endIconMode="password_toggle"
            android:inputType="textPassword"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passget"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/blinker"
                android:hint="@string/Signup_password" />
        </com.google.android.material.textfield.TextInputLayout>







    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#652F2F"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ImageButton
            android:id="@+id/discs"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:background="@color/prominent"
            app:srcCompat="@drawable/baseline_home_24" />

        <ImageButton
            android:id="@+id/gallerys"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:background="@color/prominent"
            app:srcCompat="@drawable/baseline_fitness_center_24" />

        <ImageButton
            android:id="@+id/transac"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:background="@color/prominent"
            app:srcCompat="@drawable/baseline_person_search_24" />

        <ImageButton
            android:id="@+id/others"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:background="@color/prominent"
            app:srcCompat="@drawable/baseline_info_24" />

    </LinearLayout>



</LinearLayout>